welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value getMondeHaute
    for (i<-1 to getMondeHaute) {
                 ^